# app-near

./: .gitignore  Cargo.toml  Justfile  LICENSE.md  README.md  app_stax.json  ledger_app.toml  local_test_helper.sh  local_unit_tests.sh  safer_load.sh
.github/workflows/: build_and_functional_tests.yml  coding_style_checks.yml  guidelines_enforcer.yml  misspellings_checks.yml  python_tests_checks.yml  swap-ci-workflow.yml  swap_ci_workflow.yml
borsh/: Cargo.toml
borsh/src/: lib.rs
fmt_buffer/: Cargo.toml
fmt_buffer/src/: lib.rs
mds/: binary_sizes.md  borsh_usage.md  issues.md  memory_layout.md  platforms.md
near_gas/: Cargo.toml
near_gas/src/: lib.rs
near_token/: Cargo.toml
near_token/src/: lib.rs
src/: main.rs  settings.rs  swap.rs  utils.rs
src/app_ui/: address.rs  aliases.rs  fields_context.rs  fields_writer.rs  logo.rs  menu.rs  sign.rs
src/app_ui/sign/: action.rs  transaction_prefix.rs  widgets.rs
src/app_ui/transaction_prefix/: mod.rs
src/borsh/: mod.rs
src/handlers/: get_public_key.rs  get_version.rs  get_wallet_id.rs  sign_nep366_delegate.rs  sign_nep413_msg.rs  sign_tx.rs
src/handlers/common/: finalize_sign.rs  validate_public_key.rs
src/handlers/sign_tx/: add_key.rs  create_account.rs  delegate.rs  delete_account.rs  delete_key.rs  deploy_contract.rs  function_call.rs  stake.rs  transfer.rs
src/io/: mod.rs
src/parsing/borsh/: mod.rs
src/parsing/transaction_stream_reader/: mod.rs
src/parsing/types/: tx_public_key.rs
src/transaction_prefix/: mod.rs
src/tx_stream_reader/: mod.rs
src/utils/: fmt_buffer.rs  path.rs  public_key.rs
src/utils/capped_string/: mod.rs
src/utils/crypto/: path.rs  public_key.rs
src/utils/types/: base58_buf.rs  capped_string.rs  elipsis_fields.rs  fmt_buffer.rs  hex_display.rs  strcat.rs
src/utils/ui/: mod.rs
tests/: common.py  conftest.py  requirements.txt  setup_script.sh  test_app_mainmenu.py  test_pubkey_cmd.py  test_version_cmd.py  utils.py
tests/application_client/: client.py
tests/test_public_key_validation/: test_sign_transaction.py
tests/test_sign_nep366_delegate_action/: test_nep366_delegate_action.py
tests/test_sign_nep413_msg/: test_nep413_msg.py
tests/test_sign_transaction/: test_add_key.py  test_batch_transaction.py  test_create_account.py  test_delete_account.py  test_delete_key.py  test_deploy_contract.py  test_deploy_global_contract.py  test_function_call.py  test_stake.py  test_transfer.py  test_use_global_contract.py
tests/test_sign_transaction/version_1/: test_add_key.py  test_batch_transaction.py  test_create_account.py  test_delete_account.py  test_delete_key.py  test_deploy_contract.py  test_function_call.py  test_stake.py  test_transfer.py
workdir/app-near/: Makefile  README.md
workdir/app-near/src/: app_main.c  app_main.h  blind_sign.c  blind_sign.h  constants.h  context.h  dispatcher.c  dispatcher.h  get_public_key.c  get_public_key.h  get_wallet_id.c  get_wallet_id.h  globals.c  globals.h  main.c  main.h  os_shim.h  parse_signature_request.c  parse_signature_request.h  parse_transaction.c  parse_transaction.h  sign_signature_request.c  (+5 more)
workdir/app-near/test/: CMakeLists.txt  fuzz_tx.c  main.c
(+98 files in other folders)
