[package]
name = "app-near-rust"
version = "1.0.0"
authors = ["yhql", "agrojean-ledger", "dj8yf0μl"]
edition = "2021"

[dependencies]
ledger_device_sdk = "1.5.0"
ledger_secure_sdk_sys = "1.2.0"
include_gif = "1.0.1"
hex = { version = "0.4.3", default-features = false, features = ["serde"] }
bs58 = { version = "0.5.0", default-features = false }
fmt_buffer =  { version = "0.1.0", path = "./fmt_buffer" }
near_token =  { version = "0.1.0", path = "./near_token" }
numtoa = "0.2.4"

[profile.release]
opt-level = 'z'
lto = true


[package.metadata.ledger]
curve = ["ed25519"]
flags = "0"
path = ["44'/397'"]
name = "Rust Near"

[package.metadata.ledger.nanos]
icon = "crab.gif"

[package.metadata.ledger.nanox]
icon = "crab_14x14.gif"

[package.metadata.ledger.nanosplus]
icon = "crab_14x14.gif"

[features]
default = []
speculos = ["ledger_device_sdk/speculos"]
