[package]
name = "near"
version = "2.3.2"
authors = ["dj8yf0μl", "polyprogrammist"]
edition = "2021"

[dependencies]
ledger_device_sdk = "1.19.0"
include_gif = "1.2.0"
hex = { version = "0.4.3", default-features = false, features = ["serde"] }
bs58 = { version = "0.5.0", default-features = false }
borsh =  { version = "0.1.0", path = "./borsh" }
fmt_buffer =  { version = "0.1.0", path = "./fmt_buffer" }
near_token =  { version = "0.1.0", path = "./near_token" }
near_gas =  { version = "0.1.0", path = "./near_gas" }
numtoa = "0.2.4"

[profile.release]
opt-level = 'z'
lto = true


[package.metadata.ledger]
curve = ["ed25519"]
flags = "800"
path = ["44'/397'"]
name = "NEAR"

[package.metadata.ledger.nanos]
icon = "icons/app_near_16px.gif"

[package.metadata.ledger.nanox]
icon = "icons/app_near_14px.gif"

[package.metadata.ledger.nanosplus]
icon = "icons/app_near_14px.gif"

[package.metadata.ledger.stax]
icon = "icons/app_near_32px.gif"

[package.metadata.ledger.flex]
icon = "icons/app_near_40px.gif"

[features]
default = []
debug = ["ledger_device_sdk/debug"]
speculos = ["ledger_device_sdk/speculos"]
